--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.0.0",
     "ionic-header-parallax": "^3.1.0",
     "materialize-css": "^1.0.0",
+    "ng-image-slider": "^2.8.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
