MAJ Front + back finished

--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -5,3 +5,8 @@ spring:
     password: ""
   liquibase:
     change-log: db/changeLog/db.changelog-master.xml
+
+
+logging:
+  level:
+    root: debug
